# CATalogue

./: .coverage  .coverage.LAPTOP-JNQ92QJS.15392.XdgtkFGx.c  .coveragerc  .env.example  .gitignore  .hintrc  .safety-project.ini  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_GUIDELINES_en.md  DEVELOPMENT_GUIDELINES_zh.md  Dockerfile  LICENSE  README.md  README_en.md  README_zh.md  SECURITY.md  TEST_COVERAGE_PLAN.md  __init__.py  alembic.ini  app.py  auth.py  babel.cfg  cats.db  check_db.py  check_image_urls.py  check_users.py  core  coverage.json  coverage.xml  custom_extract.py  demanding.txt  docker-compose.yml  extract_translations.py  fix_image_urls.py  image_url_validator.py  init_admin.py  init_db.py  manual_extract.py  package-lock.json  (+23 more)
.clinerules/: RULES.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
alembic/: env.py
api/: __init__.py  auth.py  base.py  config.py  database.py  db.py  exceptions.py  main.py  security.py
api/models/: __init__.py  cat.py  post.py  user.py  user_model.py
api/routers/: __init__.py  cats.py  posts.py  users.py
api/schemas/: cat.py  post.py  user.py
api/services/: cat_service.py  post_service.py  user_service.py
app/: __init__.py  __init__.py,cover  base.py  config.py  config.py,cover  constants.py  constants.py,cover  database.py  decorators.py  decorators.py,cover  extensions.py  extensions.py,cover  forms.py  forms.py,cover  models.py  models.py,cover
app/api/: __init__.py  __init__.py,cover  auth.py  auth.py,cover  base.py  cats.py  cats.py,cover
app/cli/: commands.py
app/core/: base_crud.py  base_crud.py,cover  config.py  environment_checker.py  environment_checker.py,cover  health.py  health_check.py  health_check.py,cover  initialization.py  (+3 more)
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CONFIG_MANAGEMENT.md  DOCKER_GUIDE.md  I18N_IMPLEMENTATION.md  REFACTOR_GUIDE.md  database_setup.md  pyproject_config.md  scripts_usage.md
frontend/: webpack.config.js
migrations/: env.py
public/: manifest.json
scripts/: init_db.py  initdb.py  service-manager.js
src/: app.css  app.html  svelte.d.ts
templates/: admin_approvals.html  admin_base.html  admin_cats.html  admin_users.html  base.html  cat_detail.html  edit_cat.html  edit_user.html  home.html  login.html  manage_users.html  register.html  search.html  upload.html
tests/: TestReporter.py  __init__.py  base.py  base_test.py  conftest.py  test_cat_service.py  test_client.py  test_config.py  test_decorators.py  test_forms.py  test_health_check.py  test_models.py  test_reporter.py  test_routes.py  test_routes_admin.py  test_routes_auth.py  test_routes_cats.py  test_routes_cats_enhanced.py  test_services.py  test_services_base.py
(+135 files in other folders)
